--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=books-api
+server.servlet.context-path=/books-api
+#
+yandex-disk.token=
+yandex-disk.url=
+yandex-disk.dir=
+#
+server.error.include-exception=true
+server.error.include-message=always
+server.error.include-binding-errors=always
+#
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=public
+spring.datasource.username=test
+spring.datasource.password=test
+spring.data.jdbc.dialect=postgresql
+#
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+#
+springdoc.swagger-ui.default-model-expand-depth=3
+springdoc.swagger-ui.tags-sorter=alpha
