--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,46 @@
+# Main
 spring.application.name=books-api
 server.servlet.context-path=/books-api
-#
+# Hub
 yandex-disk.token=
 yandex-disk.url=
 yandex-disk.dir=
-#
+# Errors
 server.error.include-exception=true
 server.error.include-message=always
 server.error.include-binding-errors=always
-#
+# Db
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=public
 spring.datasource.username=test
 spring.datasource.password=test
 spring.data.jdbc.dialect=postgresql
-#
+# Jpa
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
-#
+# Swagger
 springdoc.swagger-ui.default-model-expand-depth=3
 springdoc.swagger-ui.tags-sorter=alpha
+# Session
+server.reactive.session.timeout=1m
+server.servlet.session.tracking-modes=cookie
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.name=JSESSIONID
+server.servlet.session.cookie.domain=localhost
+server.servlet.session.cookie.path=/
+server.servlet.session.cookie.max-age=600
+server.servlet.session.cookie.same-site=strict
+custom.max.session=1
+# Spring session
+spring.session.timeout=1m
+spring.session.redis.namespace=spring:session
+spring.session.redis.flush-mode=on_save
+spring.session.redis.cleanup-cron=0 * * * * *
+# Redis
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
+spring.data.redis.password=1234
+spring.data.redis.ssl.enabled=false
+# Logs
+logging.level.org.springframework.jdbc=TRACE
+logging.level.org.springframework.security=TRACE
