--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,19 @@ server.error.include-exception=true
 server.error.include-message=always
 server.error.include-binding-errors=always
 #
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=public
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=test
 spring.datasource.password=test
+spring.datasource.schema=public
 spring.data.jdbc.dialect=postgresql
+#
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=public
+spring.flyway.user=test
+spring.flyway.password=test
+spring.flyway.schemas=public
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
 #
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
