--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=books-api
 server.servlet.context-path=/books-api
 #
 yandex-disk.token=${YA_DISK_TOKEN}
-yandex-disk.url=
-yandex-disk.dir=
+yandex-disk.url=${YA_DISK_URL}
+yandex-disk.dir=${YA_DISK_DIR}
 #
 server.error.include-exception=true
 server.error.include-message=always
