--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,14 @@ server.error.include-binding-errors=always
 spring.datasource.url=jdbc:postgresql://${DB_IP}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.schema=public
+spring.datasource.schema=${DB_SCHEMA}
 spring.data.jdbc.dialect=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 #
-spring.flyway.url=jdbc:postgresql://${DB_IP}:${DB_PORT}/${DB_NAME}?currentSchema=public
+spring.flyway.url=jdbc:postgresql://${DB_IP}:${DB_PORT}/${DB_NAME}
 spring.flyway.user=${DB_USERNAME}
 spring.flyway.password=${DB_PASSWORD}
-spring.flyway.schemas=public
+spring.flyway.schemas=${DB_SCHEMA}
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
