--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,6 @@ server.servlet.session.tracking-modes=cookie
 server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.name=JSESSIONID
-server.servlet.session.cookie.domain=localhost
 server.servlet.session.cookie.path=/
 server.servlet.session.cookie.max-age=600
 server.servlet.session.cookie.same-site=strict
@@ -47,9 +46,9 @@ spring.session.redis.namespace=spring:session
 spring.session.redis.flush-mode=on_save
 spring.session.redis.cleanup-cron=0 * * * * *
 # Redis
-spring.data.redis.host=127.0.0.1
-spring.data.redis.port=6379
-spring.data.redis.password=1234
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.password=${REDIS_PASSWORD}
 spring.data.redis.ssl.enabled=false
 # Logs
 logging.level.org.springframework.jdbc=TRACE
