edit: подправил модельки под описание (ниче не поменялось)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.schema=${DB_SCHEMA}
 spring.data.jdbc.dialect=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Jpa
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 # Flyway
 spring.flyway.url=jdbc:postgresql://${DB_IP}:${DB_PORT}/${DB_NAME}
