--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.flyway.baseline-version=0
 springdoc.swagger-ui.default-model-expand-depth=3
 springdoc.swagger-ui.tags-sorter=alpha
 # Session
-server.reactive.session.timeout=1m
+server.reactive.session.timeout=600
 server.servlet.session.tracking-modes=cookie
 server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.http-only=true
@@ -41,7 +41,6 @@ server.servlet.session.cookie.max-age=600
 server.servlet.session.cookie.same-site=strict
 custom.max.session=1
 # Spring session
-spring.session.timeout=1m
 spring.session.redis.namespace=spring:session
 spring.session.redis.flush-mode=on_save
 spring.session.redis.cleanup-cron=0 * * * * *
