fix: путь до схемы и отрубил flyway cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.error.include-exception=true
 server.error.include-message=always
 server.error.include-binding-errors=always
 # Db
-spring.datasource.url=jdbc:postgresql://${DB_IP}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_IP}:${DB_PORT}/${DB_NAME}?currentSchema={$DB_SCHEMA}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.schema=${DB_SCHEMA}
@@ -20,7 +20,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 # Flyway
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 
 spring.flyway.url=jdbc:postgresql://${DB_IP}:${DB_PORT}/${DB_NAME}
 spring.flyway.user=${DB_USERNAME}
