--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,7 @@ spring.datasource.url=jdbc:postgresql://${DB_IP}:${DB_PORT}/${DB_NAME}?currentSc
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.schema=${DB_SCHEMA}
-spring.data.jdbc.dialect=postgresql
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.schema=${DB_SCHEMA}
 # Jpa
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
