--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ springdoc.swagger-ui.tags-sorter=alpha
 # Session
 server.reactive.session.timeout=600
 server.servlet.session.tracking-modes=cookie
-server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.name=JSESSIONID
 server.servlet.session.cookie.path=/
