--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,15 +31,15 @@ spring.flyway.baseline-version=0
 springdoc.swagger-ui.default-model-expand-depth=3
 springdoc.swagger-ui.tags-sorter=alpha
 # Session
-server.reactive.session.timeout=6000
+#server.reactive.session.timeout=6000
 server.servlet.session.tracking-modes=cookie
 server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.name=JSESSIONID
 server.servlet.session.cookie.path=/
-server.servlet.session.cookie.max-age=6000
+server.servlet.session.cookie.max-age=-1
 server.servlet.session.cookie.same-site=strict
-custom.max.session=1
+custom.max.session=2
 # Spring session
 spring.session.redis.namespace=spring:session
 spring.session.redis.flush-mode=on_save
