fix: локализация ошибок

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.schema=${DB_SCHEMA}
 spring.datasource.hikari.schema=${DB_SCHEMA}
+spring.messages.basename=messages
 # Jpa
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
